# bazel_go_demo_dep

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-multi-module-demo  bazel-out  bazel-testlogs  go.mod  go.sum  go.work  greet.go  main  main.go  multi-module-demo  mybinary_fips  readme.md  tools.go  transition.bzl
cmd/main/: BUILD.bazel  main.go
lib/: BUILD.bazel  go.mod  go.sum  lib.go
libs/: go.mod  greet.go
pkg/api/: BUILD.bazel  go.mod  types.go
pkg/api/v1/: BUILD.bazel  types.go
pkg/utils/: BUILD.bazel  go.mod  helpers.go
pkg/utils/v1/: BUILD.bazel  helpers.go
