load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# This command generates/updates BUILD files based on go source code. We're going to exclude all vendor
# folders and sub-folders since we want gazelle to use the central go.mod

# gazelle:prefix github.com/bennettzhu1/multi-module-demo
gazelle(
    name = "gazelle",
)

go_library(
    name = "multi-module-demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/bennettzhu1/multi-module-demo",
    visibility = ["//visibility:private"],
    deps = [
        "//lib",
        "@com_github_pkg_errors//:errors",
    ],
)

go_binary(
    name = "multi-module-demo",
    embed = [":multi-module-demo_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "dbmate_tar",
    srcs = [
        "@com_github_amacneil_dbmate_v2//:v2",
    ],
    strip_prefix = "/",
    package_dir = "usr/local/bin",
    mode = "0755",
    visibility = ["//visibility:public"],
)
