load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

# This command generates/updates BUILD files based on go source code. We're going to exclude all vendor
# folders and sub-folders since we want gazelle to use the central go.mod

# gazelle:prefix github.com/bennettzhu1/multi-module-demo
gazelle(
    name = "gazelle",
)

constraint_setting(
    name = "fips_requirement",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "fips_mode_enabled",
    constraint_setting = ":fips_requirement",
    visibility = ["//visibility:public"],
)

platform(
    name = "fips_platform",
    constraint_values = [
        "//:fips_mode_enabled"
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "multi-module-demo_lib",
    srcs = ["main.go"],
    tags = ["manual"],
    importpath = "github.com/bennettzhu1/multi-module-demo",
    visibility = ["//visibility:private"],
    target_compatible_with = [":fips_mode_enabled"],
    deps = [
        "//lib",
        "@com_github_pkg_errors//:errors",
    ],
)

go_binary(
    name = "multi-module-demo",
    embed = [":multi-module-demo_lib"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# go_cross_binary(
#     name = "multi-module-demo-fips",
#     sdk_version = "1.23.0",
#     target = ":multi-module-demo",
# )
