module(
    name = "bazel_go_demo_dep",
    repo_name = "com_github_bennettzhu1_bazel_go_demo_dep",
)

bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")

GO_VERSION = "1.23.1"

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = GO_VERSION)

# https://github.com/bazel-contrib/rules_go/issues/3582
# https://github.com/bazel-contrib/rules_go/blob/7f6a9bf5870f2b5ffbba1615658676dcabf9edc7/tests/core/boringcrypto/boringcrypto_test.go
# GO_VERSION_FIPS = "1.20.4"
GO_VERSION_FIPS = "1.23.0"

go_sdk.download(
    experiments = ["boringcrypto"],
    version = GO_VERSION_FIPS,
    # goarch = "arm64",
    # goos = "linux",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_sdk.host()

# go_deps.from_file(go_work = "//:go.work")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
)

# go_deps.module(
#     path = "github.com/google/uuid",
#     sum = "h1:t6JiXgmwXMjEs8VusXIJk2BXHsn+wx8BZdTaoZ5fu7I=",
#     version = "v1.3.0",
# )
use_repo(go_deps, "com_github_bennettzhu1_multi_module_demo_lib", "com_github_google_uuid", "com_github_pkg_errors")
