load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1",
    srcs = ["types.go"],
    importpath = "github.com/bennettzhu1/bazel_go_demo_dep/pkg/api/v1",
    visibility = ["//visibility:public"],
)

alias(
    name = "api",
    actual = ":v1",
    visibility = ["//visibility:public"],
)
